# torch_market

./: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml  readme.md  system.md  tsconfig.json
clawhub/: SKILL.md  agent.json  audit_program.md  audit_sdk.md  risk.md
clawhub/lib/torchsdk/: constants.d.ts  constants.js  ephemeral.d.ts  ephemeral.js  events.d.ts  events.js  index.d.ts  index.js  program.d.ts  program.js  quotes.d.ts  quotes.js  said.js  tokens.d.ts  tokens.js  torch_market.json  transactions.d.ts  transactions.js  types.d.ts
docs/: architecture.md  audit.md  deeppool.md  litesvm.md  properties.md  risk.md  sdk.md  v20.0.0-account-constraints.md  v20.0.0-sdk-sync.md  v20_cleanup.md  verification.md  whitepaper.md
idl/: torch_market.json
programs/torch_market/: Cargo.toml
programs/torch_market/proptest-regressions/: math.txt
programs/torch_market/src/: constants.rs  contexts.rs  errors.rs  kani_proofs.rs  lib.rs  math.rs  migration.rs  pool_validation.rs  state.rs  token_2022_utils.rs
programs/torch_market/src/handlers/: admin.rs  lending.rs  market.rs  migration.rs  mod.rs  protocol_treasury.rs  reclaim.rs  revival.rs  rewards.rs  short.rs  swap.rs  token.rs  treasury.rs  vault.rs
programs/torch_market/tests/: litesvm.rs  math_proptests.rs
programs/torch_market/tests/fixtures/: raydium_amm_config.json  raydium_fee_receiver.json  wsol_mint.json
programs/torch_market/tests/litesvm/: buy.rs  coverage.rs  harness.rs  lending.rs  migration.rs  protocol_treasury.rs  reclaim.rs  revival.rs  rewards.rs  sanity.rs  sell.rs  short.rs  tier_b.rs  treasury.rs  tx_size.rs  vault.rs
scripts/: inspect-mint.ts  ledger-paths.ts  migrate.ts  resolve-legacy-vote.ts
sim/: torch_sim.py
tests/: resolve-legacy-vote.ts
