[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"        # Optimize for size instead of speed
strip = true           # Strip symbols
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
