[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"        # Optimize for size instead of speed
strip = true           # Strip symbols
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# blake3 1.6+ pulls in digest 0.11 / crypto-common 0.2 / hybrid-array, whose
# `SerializableState` blanket impls on large fixed-size arrays
# (`[u16; 2048]`, `[u128; 512]`, etc.) exceed Solana's 4KB BPF stack budget
# at link time. 1.5.5 is the last release before that dep chain was added.
# The functions themselves are dead code on the BPF side, but cargo-build-sbf
# validates frame sizes regardless. `[patch.crates-io]` requires a different
# source than crates.io, so we pull from the official BLAKE3 repo at the tag.
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }
