[package]
name = "torch_market"
version = "20.0.0"
description = "torch.market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "torch_market"

[features]
default = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }

# DeepPool CPI for DEX migration
deep_pool = { path = "../../../deep_pool/programs/deep_pool", features = ["cpi"] }

[dev-dependencies]
proptest = "1.5"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("devnet"))'] }
