[package]
name = "torch_market"
version = "11.1.0"
description = "torch.market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "torch_market"

[features]
default = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }

# Raydium CPMM CPI for DEX migration
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi" }

[dev-dependencies]
proptest = "1.5"
litesvm = "0.7"
solana-sdk = "2"
solana-program = "2"
borsh = "1.5"
bincode = "1.3"
serde_json = "1"
base64 = "0.22"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("devnet"))'] }
